# minercraft

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/gfx/: renderer.c  window.c
